--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
     "gsap": "^3.13.0",
-    "next": "15.3.2",
+    "next": "^16.1.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
